--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+/**
+ * Created By Android Studio
+ * Modified By Alexzander Purwoko Widiantoro <purwoko908@gmail.com> @2019
+ * All Rights Reserved
+ */
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.anko_version = '0.10.8'
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.28.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +29,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+        }
         
     }
 }
