--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'io.fabric'
 
 apply plugin: 'com.google.gms.google-services'
@@ -20,6 +22,7 @@ android {
         applicationId "id.kenshiro.app.panri"
         minSdkVersion 16
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,13 +36,16 @@ android {
     }
 }
 
+androidExtensions {
+    experimental = true
+}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     // Anko
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
@@ -47,9 +53,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
     /////////////////////////////////////
-
     // for testing ....
-
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -57,25 +62,44 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
     testImplementation 'org.mockito:mockito-core:2.23.4'
-    testImplementation "org.mockito:mockito-inline:2.23.4"
-    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:2.2.2") {
+    testImplementation 'org.mockito:mockito-inline:2.23.4'
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.2.2') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
     ////////////////////////////////////////
+
+    // Room -> intended for Database Operation
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+    /////////////////////////////////////////
 
     // for another necessary utilities
     // {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
-    implementation ('com.crashlytics.sdk.android:answers:1.4.4@aar'){
+    implementation('com.crashlytics.sdk.android:answers:1.4.4@aar') {
         transitive = true
     }
-
     implementation 'commons-io:commons-io:2.4'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
+
+
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation project(':mylexzlibs')
     // }
+
 }
