--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.8'
+    ext.room_version = '2.1.0-alpha05'
     repositories {
         google()
         jcenter()
