Adds JournalAds Function Database and schemas
Signed-off-by: AlexzPurewoko <purwoko908@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <service
+                android:name=".services.adsService.AdsService"
+                android:enabled="true"
+                android:exported="true">
+        </service>
+        <service
                 android:name=".services.checkUpdate.CheckUpdateService"
                 android:enabled="true"
                 android:exported="true">
